# pyimgui-stubs

./: README.md  imgui.pyi  pyproject.toml
imgui/: __init__.pyi
